feat: Proxy-Paper version check release: 1.2

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SocialFire
-description: ${project.description}
+description: "Easy to use socials commands!"
 version: ${project.version}
 main: io.github.spigotrce.socialfire.paper.PaperFire
-author: ${author}
+author: "SpigotRCE & Contributors"
 api-version: "1.13"
